--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -19,3 +19,101 @@ body h1 {
 .grid {
   display: grid;
 }
+
+.loading {
+  display: flex;
+  justify-content: space-between;
+  width: 80px;
+  height: 80px;
+}
+
+.bar {
+  width: 12%;
+  height: 100%;
+  background-color: #000;
+  transform-origin: center;
+}
+
+@-webkit-keyframes barAnimation1 {
+  0% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0.2);
+  }
+}
+
+@keyframes barAnimation1 {
+  0% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0.2);
+  }
+}
+@-webkit-keyframes barAnimation2 {
+  0% {
+    transform: scaleY(0.6);
+  }
+  25% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.6);
+  }
+  75% {
+    transform: scaleY(0.2);
+  }
+  100% {
+    transform: scaleY(0.6);
+  }
+}
+@keyframes barAnimation2 {
+  0% {
+    transform: scaleY(0.6);
+  }
+  25% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.6);
+  }
+  75% {
+    transform: scaleY(0.2);
+  }
+  100% {
+    transform: scaleY(0.6);
+  }
+}
+@-webkit-keyframes barAnimation3 {
+  0% {
+    transform: scaleY(0.2);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+@keyframes barAnimation3 {
+  0% {
+    transform: scaleY(0.2);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+.bar1,
+.bar5 {
+  -webkit-animation: 0.5s linear infinite alternate barAnimation3;
+  animation: 0.5s linear infinite alternate barAnimation3;
+}
+
+.bar2,
+.bar4 {
+  -webkit-animation: 1s linear infinite barAnimation2;
+  animation: 1s linear infinite barAnimation2;
+}
+
+.bar3 {
+  -webkit-animation: 0.5s linear infinite alternate barAnimation1;
+  animation: 0.5s linear infinite alternate barAnimation1;
+}
