--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -1,5 +1,81 @@
 body {
-  font-family: "Courier New", Courier, monospace;
+  margin: 0;
+  padding: 0;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  place-items: center;
+  max-width: 960px;
+  margin: 24px auto;
+}
+
+.button {
+  width: 80%;
+  padding: 16px;
+  background-color: transparent;
+  border: none;
+  box-sizing: border-box;
+}
+.button:hover {
+  cursor: pointer;
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+@-webkit-keyframes slideOut {
+  0% {
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    transform: translate3d(-200%, 0, 0);
+  }
+}
+@keyframes slideOut {
+  0% {
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    transform: translate3d(-200%, 0, 0);
+  }
+}
+.slide-in {
+  position: relative;
+  border: 1px solid #333;
+  overflow: hidden;
+  transition: 0.2s;
+}
+.slide-in:hover {
+  color: #fff;
+}
+.slide-in span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  z-index: -1;
+  transform: translate3d(100%, 0, 0);
+  transition: transform 0.4s;
 }
 
 body {
