--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -20,45 +20,36 @@
 }
 
 // slide in
-
-@keyframes slideIn {
-  0% {
-    transform: translate3d(100%, 0, 0);
-  }
-  100% {
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes slideOut {
-  0% {
-    transform: translate3d(-100%, 0, 0);
-  }
-  100% {
-    transform: translate3d(-200%, 0, 0);
-  }
-}
-
 .slide-in {
   position: relative;
   border: 1px solid #333;
   overflow: hidden;
   transition: 0.2s;
 
-  &:hover {
-    color: #fff;
-  }
-
-  span {
+  &::before {
+    content: '';
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    margin: auto;
+    width: 400px;
+    height: 400px;
+    border-radius: 9999px;
     background-color: #333;
     z-index: -1;
-    transform: translate3d(100%, 0, 0);
-    transition: transform 0.4s;
+    transform: translate3d(-50%, -50%, 0) scale(0);
+    opacity: 0;
+  }
+
+  &:hover {
+    color: #fff;
+    transition: 1s;
+
+    &::before {
+      opacity: 1;
+      transform: translate3d(-50%, -50%, 0) scale(3);
+      transition: transform 1.5s;
+    }
   }
 }
