--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -18,6 +18,7 @@ body {
   background-color: transparent;
   border: none;
   box-sizing: border-box;
+  font-size: 16px;
 }
 .button:hover {
   cursor: pointer;
@@ -49,6 +50,34 @@ body {
 .slide-in:hover::before {
   transform: scaleX(1);
   transform-origin: top left;
+}
+
+.text-transition {
+  position: relative;
+  color: transparent;
+  background: linear-gradient(90deg, #f04b00 50%, #000 50%);
+  background-position-x: 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 250% 100%;
+  transition: 1s;
+  transition: background-position-x 0.8s, color 0.8s;
+}
+.text-transition:hover {
+  background-position-x: 0;
+}
+.text-transition::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid transparent;
+  -o-border-image: linear-gradient(90deg, #f04b00, black) 1;
+  border-image: linear-gradient(90deg, #f04b00, black) 1;
+  border-image-width: 3px;
 }
 
 body {
