--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -13,6 +13,7 @@
   background-color: transparent;
   border: none;
   box-sizing: border-box;
+  font-size: 16px;
 
   &:hover {
     cursor: pointer;
@@ -48,5 +49,35 @@
       transform: scaleX(1);
       transform-origin: top left;
     }
+  }
+}
+
+.text-transition {
+  position: relative;
+  color: transparent;
+  background: linear-gradient(90deg, #f04b00 50%, #000 50%);
+  background-position-x: 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 250% 100%;
+  transition: 1s;
+  transition: background-position-x 0.8s, color 0.8s;
+
+  &:hover {
+    background-position-x: 0;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid transparent;
+    border-image: linear-gradient(90deg, rgba(240, 75, 0, 1), rgba(0, 0, 0, 1))
+      1;
+    border-image-width: 3px;
   }
 }
