--- a/src/scss/svg.scss
+++ b/src/scss/svg.scss
@@ -16,20 +16,35 @@ svg {
 }
 
 .wave {
-  animation: wave 3s linear;
+  animation: wave 3s cubic-bezier(0.55, 0.5, 0.45, 0.5);
   animation-iteration-count: infinite;
-  fill: #4478e3;
-}
-.gooeff {
-  filter: url(#goo);
+  fill: #fff;
 }
 #wave2 {
   animation-duration: 5s;
   animation-direction: reverse;
-  opacity: 0.6;
+  opacity: 0.7;
+  animation-delay: -3s;
+  animation-duration: 10s;
 }
 @keyframes wave {
   100% {
     transform: translateX(-100%);
   }
+}
+
+.wrap {
+  position: relative;
+}
+
+.svg-title {
+  position: absolute;
+  font-size: 64px;
+  font-weight: bold;
+  color: #000;
+  background-color: #fff;
+  mix-blend-mode: difference;
+  z-index: 100;
+  width: 100%;
+  padding-bottom: 120px;
 }
