--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -3,371 +3,242 @@ body {
   padding: 0;
 }
 
-.buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-  place-items: center;
-  max-width: 960px;
-  margin: 24px auto;
+:root {
+  --main: #64c9cf;
+  --secondary: #fde49c;
+  --primary: #c32bad;
+  --accent: #ffb740;
+  --white: #fff;
+  --black: #333;
 }
 
-.button {
-  width: 80%;
-  padding: 16px;
-  background-color: transparent;
-  border: none;
+* {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 0.2em;
+  background: var(--main);
   font-size: 16px;
-}
-.button:hover {
-  cursor: pointer;
+  line-height: 1.7;
 }
 
-.slide-in {
-  position: relative;
-  border: 1px solid #333;
-  overflow: hidden;
-  transition: 0.2s;
-}
-.slide-in::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: #000;
-  z-index: -1;
-  transition: transform 0.3s ease;
-  transform: scaleX(0);
-  transform-origin: top right;
-}
-.slide-in:hover {
-  color: #fff;
-}
-.slide-in:hover::before {
-  transform: scaleX(1);
-  transform-origin: top left;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.text-transition {
-  position: relative;
-  color: transparent;
-  background: linear-gradient(90deg, #f04b00 50%, #000 50%);
-  background-position-x: 100%;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-size: 250% 100%;
-  transition: 1s;
-  transition: background-position-x 0.8s, color 0.8s;
-}
-.text-transition:hover {
-  background-position-x: 0;
-}
-.text-transition::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 1px solid transparent;
-  -o-border-image: linear-gradient(90deg, #f04b00, black) 1;
-  border-image: linear-gradient(90deg, #f04b00, black) 1;
-  border-image-width: 3px;
-}
-
-#waveCanvas {
-  width: 100%;
-}
-
-.svg-wrap {
-  margin: 120px 0 0;
-}
-
-.tonton3 {
-  width: 100%;
-}
-
-svg {
-  width: 100%;
-  overflow: visible;
-}
-
-.wave {
-  -webkit-animation: wave 3s cubic-bezier(0.55, 0.5, 0.45, 0.5);
-  animation: wave 3s cubic-bezier(0.55, 0.5, 0.45, 0.5);
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  fill: #fff;
-}
-
-#wave2 {
-  -webkit-animation-duration: 5s;
-  animation-duration: 5s;
-  animation-direction: reverse;
-  opacity: 0.7;
-  -webkit-animation-delay: -3s;
-  animation-delay: -3s;
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-}
-
-@-webkit-keyframes wave {
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes wave {
-  100% {
-    transform: translateX(-100%);
-  }
-}
-.wrap {
-  position: relative;
-}
-
-.svg-title {
-  position: absolute;
-  font-size: 64px;
-  font-weight: bold;
-  color: #000;
-  background-color: #fff;
-  mix-blend-mode: difference;
-  z-index: 100;
-  width: 100%;
-  padding-bottom: 120px;
-}
-
-.scroll-effect {
-  position: relative;
-}
-.scroll-effect section {
-  height: 100vh;
-}
-.scroll-effect section:nth-child(odd) {
-  background-color: #eee;
-}
-.scroll-effect .year {
-  display: flex;
-  font-size: 80px;
-  position: fixed;
-  bottom: 10%;
-  right: 10%;
-  font-weight: bold;
-  overflow: hidden;
-}
-.scroll-effect .first-digit-num {
-  display: inline-block;
-}
-.scroll-effect .box-wrap {
-  height: 100px;
-  width: 100px;
-  position: fixed;
-  bottom: 15%;
-  right: 15%;
-  overflow: hidden;
-}
-.scroll-effect .number {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  margin: 0 16px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  font-size: 80px;
-}
-
-body h1 {
-  font-size: 80px;
-}
-
-.test {
-  display: flex;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-.grid {
-  display: grid;
-}
-
-.content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 300px;
-}
-
-.loading {
-  display: flex;
-  justify-content: space-between;
-  width: 80px;
-  height: 80px;
-}
-
-.bar {
-  width: 12%;
-  height: 100%;
-  background-color: #000;
-  transform-origin: center;
-}
-
-@-webkit-keyframes barAnimation1 {
-  0% {
-    transform: scaleY(1);
-  }
-  100% {
-    transform: scaleY(0.2);
-  }
-}
-
-@keyframes barAnimation1 {
-  0% {
-    transform: scaleY(1);
-  }
-  100% {
-    transform: scaleY(0.2);
-  }
-}
-@-webkit-keyframes barAnimation2 {
-  0% {
-    transform: scaleY(0.6);
-  }
-  25% {
-    transform: scaleY(1);
-  }
-  50% {
-    transform: scaleY(0.6);
-  }
-  75% {
-    transform: scaleY(0.2);
-  }
-  100% {
-    transform: scaleY(0.6);
-  }
-}
-@keyframes barAnimation2 {
-  0% {
-    transform: scaleY(0.6);
-  }
-  25% {
-    transform: scaleY(1);
-  }
-  50% {
-    transform: scaleY(0.6);
-  }
-  75% {
-    transform: scaleY(0.2);
-  }
-  100% {
-    transform: scaleY(0.6);
-  }
-}
-@-webkit-keyframes barAnimation3 {
-  0% {
-    transform: scaleY(0.2);
-  }
-  100% {
-    transform: scaleY(1);
-  }
-}
-@keyframes barAnimation3 {
-  0% {
-    transform: scaleY(0.2);
-  }
-  100% {
-    transform: scaleY(1);
-  }
-}
-.bar1,
-.bar5 {
-  -webkit-animation: 0.5s linear infinite alternate barAnimation3;
-  animation: 0.5s linear infinite alternate barAnimation3;
-}
-
-.bar2,
-.bar4 {
-  -webkit-animation: 1s linear infinite barAnimation2;
-  animation: 1s linear infinite barAnimation2;
-}
-
-.bar3 {
-  -webkit-animation: 0.5s linear infinite alternate barAnimation1;
-  animation: 0.5s linear infinite alternate barAnimation1;
-}
-
-.line-loading {
-  position: relative;
-  width: 100%;
-}
-
-.line {
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 30%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #000);
-  -webkit-animation: animate1 1.5s linear infinite;
-  animation: animate1 1.5s linear infinite;
-}
-
-@-webkit-keyframes animate1 {
-  0% {
-    left: -100%;
-  }
-  40% {
-    left: -100%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-
-@keyframes animate1 {
-  0% {
-    left: -100%;
-  }
-  40% {
-    left: -100%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-.box {
-  display: block;
-  background-color: #000;
-  width: 100px;
-  height: 100px;
+.section {
+  width: 100vw;
 }
 
 .title {
-  position: relative;
+  margin: 0;
   text-align: center;
+  font-size: 64px;
 }
 
-.word {
-  display: inline-block;
+.text-animation {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background: var(--main);
+  color: #fff;
+}
+.text-animation h1 {
+  text-align: center;
+  font-size: 64px;
+}
+.text-animation h1 .title {
+  display: flex;
+}
+.text-animation h1 .space {
+  margin-left: 0.4em;
+}
+.text-animation h1 .sub-title {
+  display: block;
+  margin-top: 24px;
+  font-size: 16px;
   opacity: 0;
-  transform: translate3d(0, 50px, 0);
+  transform: translate3d(0, 100px, 0);
+}
+.text-animation .scroll {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  width: 1px;
+  height: 20vh;
+  overflow: hidden;
+}
+.text-animation .scroll::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 4vh;
+  background: #fff;
+  -webkit-animation: scroll 1.5s linear infinite;
+  animation: scroll 1.5s linear infinite;
+  z-index: 1;
 }
 
-.scroll-section {
-  height: 700px;
+@-webkit-keyframes scroll {
+  0% {
+    transform: translate3d(0, -8vh, 0);
+  }
+  60% {
+    transform: translate3d(0, 16vh, 0);
+  }
+  100% {
+    transform: translate3d(0, 22vh, 0);
+  }
 }
 
-.slide-box {
-  width: 100px;
-  height: 100px;
-  background-color: #000;
+@keyframes scroll {
+  0% {
+    transform: translate3d(0, -8vh, 0);
+  }
+  60% {
+    transform: translate3d(0, 16vh, 0);
+  }
+  100% {
+    transform: translate3d(0, 22vh, 0);
+  }
+}
+.slide-in {
+  display: flex;
+}
+.slide-in .left,
+.slide-in .right {
+  width: 50%;
+  padding: 36px;
+}
+.slide-in .left p,
+.slide-in .right p {
+  margin: 0;
+  font-size: 24px;
+  color: #fff;
+  opacity: 0;
+  transform: translate3d(0, 200px, 0);
+}
+.slide-in .left {
+  transform: translate3d(-100%, 0, 0);
+  background-color: var(--primary);
+}
+.slide-in .right {
+  transform: translate3d(100%, 0, 0);
+  background-color: var(--accent);
+}
+
+.fixed-image {
+  background: var(--black);
+}
+.fixed-image .inner {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+  position: relative;
+  padding-top: 120px;
+}
+.fixed-image .image {
+  aspect-ratio: 16/9;
+  width: 100%;
+  overflow: hidden;
+  position: sticky;
+  top: 120px;
+  left: 50%;
+}
+.fixed-image .image img {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center center;
+  object-position: center center;
+}
+.fixed-image .content {
+  display: flex;
+  padding-top: 40%;
+  color: #fff;
+  font-size: 24px;
+}
+.fixed-image .content p {
+  width: 50%;
+  margin-left: auto;
+}
+
+.pined {
+  overflow: hidden;
+  background-color: var(--black);
+}
+.pined .pined-inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.pined .pined-list {
+  position: absolute;
+  left: 0;
+  display: flex;
+  gap: 60px;
+}
+.pined .pined-list li {
+  width: 600px;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+}
+.pined .pined-list li img {
+  width: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.parallax {
+  background-color: var(--black);
+}
+.parallax .inner {
+  padding: 120px 60px;
+}
+.parallax .content {
+  display: flex;
+}
+.parallax .content:first-of-type p {
+  right: 0;
+}
+.parallax .content:nth-of-type(2) {
+  margin-top: 120px;
+}
+.parallax .content:nth-of-type(2) img {
+  margin-left: auto;
+}
+.parallax .content img {
+  width: 60%;
+}
+.parallax .content p {
+  width: 50%;
+  position: absolute;
+  color: var(--white);
+  font-size: 48px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: #fff;
 }
